--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       END
 
 </code></pre>
-      <div class="command-line">python3 glo > run .glo</div>
+      <div class="command-line">python3 glo > run fizzbuzz.glo</div>
     </div>
 
     <h2 class="section-title">Code Examples</h2>
